# Pill_dispenser

./: CMakeLists.txt  README.md  main.c  pico_sdk_import.cmake
include/: board.h  buttons.h  config.h  eeprom.h  eeprom_at24c256.h  leds.h  lora.h  sensors.h  state.h  stepper.h  util.h
src/: buttons.c  eeprom.c  eeprom_at24c256.c  leds.c  lora.c  main.c  sensors.c  state.c  stepper.c  util.c
